update: some code cleanups